bk_ida/gccida/g0/df_bb_du_chain_create
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1905:4: error: expected ';' after expression
rtx insn; // [rsp+68h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1905:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+68h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1908:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1908:31: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1908:23: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1908:58: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1908:71: error: expected ')'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1908:5: note: to match this '('
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1910:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/df.c:1911:27: error: use of undeclared identifier 'insn'
if ( rtx_class[*( _WORD *)insn] == 105 ) 
                          ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_du_chain_create/src/obj/df.o] Error 1
